Various improvement based on vpype-perspective
- added __init__.py to make a proper package
- requirements.txt -> dev_requirements.txt
- fixed pyproject.toml for black
- added isort
- improved/fixed README.md
- fixed missing [all] in setup.py
- improved main .py file

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -3,3 +3,9 @@ requires = ["setuptools", "wheel", "numpy"]
 
 [tool.black]
 line-length = {{cookiecutter.line_length}}
+target-version = ["py38", "py39", "py310"]
+
+[tool.isort]
+profile = "black"
+line_length = {{cookiecutter.line_length}}
+src_paths = ["{{cookiecutter.project_identifier}}"]
