--- a/{{cookiecutter.project_slug}}/.github/workflows/release.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/release.yml
@@ -1,3 +1,4 @@
+{% raw %}
 name: Release
 
 on:
@@ -45,3 +46,4 @@ jobs:
         user: __token__
         password: ${{ secrets.PYPI_TOKEN }}
         verbose: true
+{% endraw %}
